[package]
name = "adv2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
itertools = "0.10.5"
lazy_static = "1.4.0"
miette = { version = "5.5.0", features = ["fancy"] }
nom = "7.1.1"
nom-supreme = "0.8.0"
nom_locate = "4.1.0"
num = "0.4.0"
petgraph = "0.6.3"
regex = "1.7.0"
take-until = "0.1.0"
thiserror = "1.0.38"
